# ecommerce-app

./: .gitignore  Cargo.toml  README.md  products.db  promt-readme.md
migrations/: 001_create_products.sql
src/: main.rs
src/application/: dtos.rs  mod.rs  services.rs
src/domain/: entities.rs  repositories.rs
src/infrastructure/: database.rs  mod.rs  repositories.rs
src/presentation/: handlers.rs  mod.rs  routes.rs
src/presentation/templates/: mod.rs  page_templates.rs  product_templates.rs
static/css/: styles.css
static/html/: error.html  product_card.html  product_detail.html  products.html
